fix: adjust margin-bottom for medium-widget iframe for better spacing

--- a/css/medium.css
+++ b/css/medium.css
@@ -87,7 +87,7 @@
     .medium-widget iframe {
         width: 100%;
         height: 1000px;
-        margin-bottom: 60px;
+        margin-bottom: 5vh;
     }   
     
 }
